Refactored ArchiveExpander to use single cache file